--- a/dotnet-ci.yml
+++ b/dotnet-ci.yml
@@ -1,30 +1,30 @@
-name: .NET Build
+# name: .NET Build
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+# on:
+#   push:
+#     branches: [ main ]
+#   pull_request:
+#     branches: [ main ]
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout source code
-        uses: actions/checkout@v4
+#     steps:
+#       - name: Checkout source code
+#         uses: actions/checkout@v4
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '8.0.x'  # sửa đúng version bạn dùng
+#       - name: Setup .NET
+#         uses: actions/setup-dotnet@v4
+#         with:
+#           dotnet-version: '8.0.x'  # sửa đúng version bạn dùng
 
-      - name: Restore dependencies
-        run: dotnet restore
+#       - name: Restore dependencies
+#         run: dotnet restore
 
-      - name: Build project
-        run: dotnet build --configuration Release --no-restore
+#       - name: Build project
+#         run: dotnet build --configuration Release --no-restore
 
-      # Nếu có Unit Test, mở comment đoạn dưới
-      # - name: Run tests
-      #   run: dotnet test --no-build
+#       # Nếu có Unit Test, mở comment đoạn dưới
+#       # - name: Run tests
+#       #   run: dotnet test --no-build
